dataset1235/2025-2/1955397009/users/1607202972/executions/3239899347_4204267109.log
== SUBMISSION (2025-08-28 12:59:32)
-- CODE: 
x=float(input())
y=float(input())
Q=(x-(y*7))
print(round(Q,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
8880.58
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
841.94
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
859.5633
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
791.86
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
1942.19
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
7859.5633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:59:33)
-- CODE: 
x=float(input())
y=float(input())
Q=(x-(y*7))
print(round(Q,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
8880.58
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
841.94
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
859.5633
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
791.86
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
1942.19
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
7859.5633
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:59:35)
-- CODE: 
x=float(input())
y=float(input())
Q=(x-(y*7))
print(round(Q,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
---- user output:
8880.58
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
---- user output:
841.94
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
---- user output:
859.5633
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
---- user output:
791.86
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
---- user output:
1942.19
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
---- user output:
7859.5633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:59:06)
-- CODE: 
x=float(input())
y=float(input())
Q=(x-(y*7))
print(round(Q,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 4
    print(round(Q,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
